// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionsList /> when isLoading=false with results renders as expected 1`] = `
<div
  className="y-suggestions-list y-hc-border y-suggestions-list--with-results"
>
  <ul
    className="y-suggestions-list--results"
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results when onHover is called updates the state 1`] = `null`;

exports[`<SuggestionsList /> when isLoading=false with results with state.hoveredId=id renders as expected 1`] = `
<div
  className="y-suggestions-list y-hc-border y-suggestions-list--with-results"
>
  <ul
    className="y-suggestions-list--results"
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results with state.hoveredId=id when the mouse leaves renders as expected 1`] = `
<div
  className="y-suggestions-list y-hc-border y-suggestions-list--with-results"
>
  <ul
    className="y-suggestions-list--results"
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false without results renders as expected 1`] = `
<div
  className="y-suggestions-list y-hc-border y-suggestions-list--with-status"
>
  <Block
    padding="large"
    textAlign="center"
    textSize="small"
  >
    <TextWrapper
      className="y-suggestions-list--no-results"
      color="metadata"
    >
      noResultsText
    </TextWrapper>
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results renders as expected 1`] = `
<div
  className="y-suggestions-list y-hc-border y-suggestions-list--with-status y-suggestions-list--with-results"
>
  <ul
    className="y-suggestions-list--results"
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <Block
    push={-2}
  >
    <Spinner
      className="y-suggestions-list--loading"
      color="light"
      hideText={false}
      isCentered={true}
      size="medium"
      text="loadingText"
    />
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results when onHover is called updates the state 1`] = `null`;

exports[`<SuggestionsList /> when isLoading=true with results with state.hoveredId=id renders as expected 1`] = `
<div
  className="y-suggestions-list y-hc-border y-suggestions-list--with-status y-suggestions-list--with-results"
>
  <ul
    className="y-suggestions-list--results"
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <Block
    push={-2}
  >
    <Spinner
      className="y-suggestions-list--loading"
      color="light"
      hideText={false}
      isCentered={true}
      size="medium"
      text="loadingText"
    />
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results with state.hoveredId=id when the mouse leaves renders as expected 1`] = `
<div
  className="y-suggestions-list y-hc-border y-suggestions-list--with-status y-suggestions-list--with-results"
>
  <ul
    className="y-suggestions-list--results"
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <Block
    push={-2}
  >
    <Spinner
      className="y-suggestions-list--loading"
      color="light"
      hideText={false}
      isCentered={true}
      size="medium"
      text="loadingText"
    />
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true without results renders as expected 1`] = `
<div
  className="y-suggestions-list y-hc-border y-suggestions-list--with-status"
>
  <Block
    push={-2}
  >
    <Spinner
      className="y-suggestions-list--loading"
      color="light"
      hideText={false}
      isCentered={true}
      size="medium"
      text="loadingText"
    />
  </Block>
</div>
`;
